minor misalignment fixes

--- a/src/scss/components.sass
+++ b/src/scss/components.sass
@@ -88,6 +88,7 @@ p + p
   @extend %t
   font-size: 18px
   text-align: center
+  text-wrap: balance
   color: rgba($black, 0.4)
   text-decoration-line: underline
   text-decoration-skip-ink: all
