--- a/src/scss/portfolio.sass
+++ b/src/scss/portfolio.sass
@@ -5,6 +5,8 @@ html, body
   padding: 0
   margin: 0
   scroll-behavior: smooth
+  height: 100svh
+  width: 100swv
 
 body
   background: $black
@@ -14,6 +16,7 @@ body
 main
   height: 100svh
   overflow-y: scroll
+  overflow-x: hidden
   scroll-behavior: smooth
 
   display: flex
